--- a/manage/main.html
+++ b/manage/main.html
@@ -284,7 +284,7 @@
                     window.location.href = 'shop.html';
                 }
                 function goToBalance() {
-                    window.location.href = 'Balance.html';
+                    window.location.href = 'balance.html';
                 }
                 function goToreport() {
                     window.location.href = 'report.html';
